--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <h1>Welcome to my colorful website!</h1>
-    <button id="clap-button" class="button">👏</button>
+    <button id="clap-button" class="button">Click me!</button>
   </div>
 </body>
 
